# ROS_autonomous_delivery

./: .gitignore  README.md  STUDENT_LAB.md  kill.sh  map_goal_picker.py  mcp_client_openai.py  mcp_memory_context.py  mcp_ros2_turtlebot_notes.txt  requirements.txt
all_maps/: good_map.pgm  good_map.yaml  normal_map.pgm  normal_map.yaml
control_center/: run_gui.sh  turtlebot_gui.py
control_center/config/: saved_arm_positions.json  saved_arm_sequences.json  saved_locations.json
control_center/logs/: session_20260427_215740.txt
finalproj/arm/: .gitignore  README.md  build-humble.sh  build-jazzy.sh  run-dynamixel-wizard.sh  run-finalproj-local-teleop.sh  run-finalproj-remote-arm.sh  run-openmanipulator-hardware.sh  run-openmanipulator-teleop.sh  setup-openmanipulator-teleop.sh
finalproj/arm/src/finalproj_openmanipulator_control/: package.xml  setup.cfg  setup.py
finalproj/arm/src/finalproj_openmanipulator_control/config/: controller.yaml  servo.yaml
finalproj/arm/src/finalproj_openmanipulator_control/docs/: FINALPROJ_ARM_INSTRUCTIONS.txt
finalproj/arm/src/finalproj_openmanipulator_control/finalproj_openmanipulator_control/: joy_controller.py  raw_joy_node.py  velocity_playback_reference.py
finalproj/arm/src/finalproj_openmanipulator_control/launch/: servo.launch.py  system.launch.py
finalproj/arm/src/finalproj_openmanipulator_control/resource/: finalproj_openmanipulator_control
install/: local_setup.sh  setup.sh
install/custom_turtlebot_nodes/lib/custom_turtlebot_nodes/: joystick_teleop
install/custom_turtlebot_nodes/share/custom_turtlebot_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_fake_node/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build
map/: turtlebot3_world_explored.pgm  turtlebot3_world_explored.yaml
mcp_server/: __init__.py  mcp_client_openai.py  mcp_memory_context.py  mcp_server_ros2.py  tk_worker.py
real_map/: test_map.pgm  test_map.yaml
src/custom_turtlebot_nodes/: package.xml  setup.cfg  setup.py
src/custom_turtlebot_nodes/custom_turtlebot_nodes/: joystick_teleop.py
src/custom_turtlebot_nodes/launch/: joystick_teleop.launch.py
(+139 files in other folders)
